--- a/layouts/BasicLayout/BasicLayout.scss
+++ b/layouts/BasicLayout/BasicLayout.scss
@@ -1,7 +1,7 @@
 .basic-layout{
   min-height: 100vh;
   .content{
-    border-color: #eee;
+    background-color: $background-gray-light;
     height: 100vh;
   }
 }
