--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,3 +4,4 @@
 //Components
 @import "../components/Header/Header.scss";
 @import "../components/Header/TopBar/TopBar.scss";
+@import "../components/Header/Menu/Menu.scss";
