--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -6,3 +6,4 @@
 @import "../components/Header/TopBar/TopBar.scss";
 @import "../components/Header/Menu/Menu.scss";
 @import "../components/Modal/BasicModal/BasicModal.scss";
+@import "../components/Auth/Forms/LoginForm/LoginForm.scss";
