--- a/client/components/Header/TopBar/TopBar.scss
+++ b/client/components/Header/TopBar/TopBar.scss
@@ -13,7 +13,7 @@
     align-items: center;
 
     img{
-      height: 50px;
+      height: 50px !important;
       transition: all .5s;
       &:hover{
         transform: translateX(-15px);
