--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -10,3 +10,4 @@
 @import "../components/Header/Menu/Menu.scss";
 @import "../components/Modal/BasicModal/BasicModal.scss";
 @import "../components/Auth/Forms/LoginForm/LoginForm.scss";
+@import "../components/Account/ChangeNameForm/ChangeNameForm.scss";
