Change Email form maq

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -11,3 +11,4 @@
 @import "../components/Modal/BasicModal/BasicModal.scss";
 @import "../components/Auth/Forms/LoginForm/LoginForm.scss";
 @import "../components/Account/ChangeNameForm/ChangeNameForm.scss";
+@import "../components/Account/ChangeNameForm/ChangeEmailForm.scss";
