--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -12,3 +12,4 @@
 @import "../components/Auth/Forms/LoginForm/LoginForm.scss";
 @import "../components/Account/ChangeNameForm/ChangeNameForm.scss";
 @import "../components/Account/ChangeEmailForm/ChangeEmailForm.scss";
+@import "../components/Account/ChangePasswordForm/ChangePasswordForm.scss";
