games list beta

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -16,3 +16,4 @@
 @import "../components/Account/ChangePasswordForm/ChangePasswordForm.scss";
 @import "../components/Account/AddressForm/AddressForm.scss";
 @import "../components/Account/AddressList/AddressList.scss";
+@import "../components/GamesList/GamesList.scss";
