--- a/client/components/GamesList/GamesList.scss
+++ b/client/components/GamesList/GamesList.scss
@@ -40,6 +40,8 @@
           color: $font-light;
           padding: 0 5px 3px 0;
           font-size: 18px;
+          font-weight: 600;
+          letter-spacing: 2px;
         }
       }
     }
