--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -4,6 +4,8 @@
 //Pages
 @import "../pages/account.scss";
 @import "../pages/index.scss";
+@import "../pages/games/platform.scss";
+
 
 //Components
 @import "../components/Header/Header.scss";
