games list pagination

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -19,3 +19,4 @@
 @import "../components/Account/AddressForm/AddressForm.scss";
 @import "../components/Account/AddressList/AddressList.scss";
 @import "../components/GamesList/GamesList.scss";
+@import "../components/Pagination/Pagination.scss";
