--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -20,3 +20,4 @@
 @import "../components/Account/AddressList/AddressList.scss";
 @import "../components/GamesList/GamesList.scss";
 @import "../components/Pagination/Pagination.scss";
+@import "../components/GamePage/Header/Header.scss";
