tabs main container

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -21,3 +21,4 @@
 @import "../components/GamesList/GamesList.scss";
 @import "../components/Pagination/Pagination.scss";
 @import "../components/GamePage/Header/Header.scss";
+@import "../components/GamePage/Tabs/Tabs.scss";
