--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -22,3 +22,5 @@
 @import "../components/Pagination/Pagination.scss";
 @import "../components/GamePage/Header/Header.scss";
 @import "../components/GamePage/Tabs/Tabs.scss";
+@import "../components/GamePage/Tabs/TabItems/GameVideo/GameVideo.scss";
+@import "../components/GamePage/Tabs/TabItems/ImagesCarousel/ImagesCarousel.scss";
