--- a/client/components/GamePage/Header/Header.scss
+++ b/client/components/GamePage/Header/Header.scss
@@ -100,5 +100,14 @@
         content: "";
       }
     }
+
+  }
+  &__date{
+    display: flex;
+    margin-top: 20px;
+    h4{
+      color: $primary;
+      margin-right: 10px;
+    }
   }
 }
