--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -3,6 +3,7 @@
 @import "../layouts/BasicLayout/BasicLayout.scss";
 //Pages
 @import "../pages/account.scss";
+@import "../pages/wishlist.scss";
 @import "../pages/index.scss";
 @import "../pages/games/platform.scss";
 
