--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -5,6 +5,7 @@
 @import "../pages/account.scss";
 @import "../pages/wishlist.scss";
 @import "../pages/index.scss";
+@import "../pages/search.scss";
 @import "../pages/games/platform.scss";
 
 
