--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -6,6 +6,7 @@
 @import "../pages/wishlist.scss";
 @import "../pages/index.scss";
 @import "../pages/search.scss";
+@import "../pages/cart.scss";
 @import "../pages/games/platform.scss";
 
 
