--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -27,3 +27,4 @@
 @import "../components/GamePage/Tabs/Tabs.scss";
 @import "../components/GamePage/Tabs/TabItems/GameVideo/GameVideo.scss";
 @import "../components/GamePage/Tabs/TabItems/ImagesCarousel/ImagesCarousel.scss";
+@import "../components/Cart/CartSummary/CartSummary.scss";
