--- a/client/components/Cart/CartSummary/CartSummary.scss
+++ b/client/components/Cart/CartSummary/CartSummary.scss
@@ -28,4 +28,21 @@
       }
     }
   }
+
+  &__resume {
+    td {
+      &:last-of-type {
+        text-align: center !important;
+      }
+    }
+    .total-price{
+      color: $primary;
+      font-weight: bold;
+      font-size: 20px;
+    }
+    .clear{
+      border-bottom: 1px solid $border-light !important;
+      border-left: 1px solid $border-light !important;
+    }
+  }
 }
