address selector component

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -28,3 +28,4 @@
 @import "../components/GamePage/Tabs/TabItems/GameVideo/GameVideo.scss";
 @import "../components/GamePage/Tabs/TabItems/ImagesCarousel/ImagesCarousel.scss";
 @import "../components/Cart/CartSummary/CartSummary.scss";
+@import "../components/Cart/ShippingSelect/ShippingSelect.scss";
