strapi client integration

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -29,3 +29,5 @@
 @import "../components/GamePage/Tabs/TabItems/ImagesCarousel/ImagesCarousel.scss";
 @import "../components/Cart/CartSummary/CartSummary.scss";
 @import "../components/Cart/ShippingSelect/ShippingSelect.scss";
+@import "../components/Cart/Payment/Payment.scss";
+
