--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -30,4 +30,6 @@
 @import "../components/Cart/CartSummary/CartSummary.scss";
 @import "../components/Cart/ShippingSelect/ShippingSelect.scss";
 @import "../components/Cart/Payment/Payment.scss";
+@import "../components/Cart/Payment/PaymentForm/PaymentForm.scss";
+
 
