--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -7,6 +7,7 @@
 @import "../pages/index.scss";
 @import "../pages/search.scss";
 @import "../pages/cart.scss";
+@import "../pages/orders.scss";
 @import "../pages/games/platform.scss";
 
 
