--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -32,5 +32,6 @@
 @import "../components/Cart/ShippingSelect/ShippingSelect.scss";
 @import "../components/Cart/Payment/Payment.scss";
 @import "../components/Cart/Payment/PaymentForm/PaymentForm.scss";
+@import "../components/Orders/Order/Order.scss";
 
 
